--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@ html {
 
 body {
   color: var(--text-color-primary);
-  letter-spacing: 0.02em;
+  letter-spacing: 0.03em;
   line-height: 1.17;
   font-size: 14px;
   font-weight: 500;
@@ -52,6 +52,10 @@ h3 {
   margin-bottom: 0px;
 }
 
+img {
+  display: block;
+
+}
 
 a {
   text-decoration: none;
@@ -106,9 +110,12 @@ height: 60px;
 }
 /*Nav-menu*/
 
+
+
 .nav-menu {
   display: flex;
   align-items: center;
+  
   line-height: 1.17;
   letter-spacing: 0.02em;
 }
@@ -186,6 +193,25 @@ height: 60px;
 .link:hover,
 .link:focus {
   color: var(--text-color-hover);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.current {
+  color: var(--text-color-hover);
+  margin-top: 32px;
+}
+
+.current::after {
+  display: block;
+  content: "";
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+
+  margin-top: 27px;
+
+  background-color: var(--text-color-hover);
+
 }
 
  /*Hero*/
@@ -242,6 +268,53 @@ border-radius: 4px;
 .hero>.button:hover,
 .hero>.button:focus {
   background-color: #188CE8;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 1;
+
+  background-color: rgba(0, 0, 0, 0.2);
+  height: 100vh;
+  width: 100vw;
+}
+
+.modal-window {
+  position: absolute;
+  background-color: var(--theme-color-light);
+  width: 528px;
+  height: 581px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+  0px 1px 1px rgba(0, 0, 0, 0.14),
+  0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+
+.modal-close-button {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+
+  color: var(--logo-color);
+  background-color: var(--theme-color-light);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+
+
+}
+
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
 }
 
 /*Benefits*/ 
@@ -303,6 +376,11 @@ width: 270px;
   margin-right: 30px;
 }
 
+.list-item-works {
+  position: relative;
+  z-index: 0;
+}
+
 .works {
 
   margin-top: 94px;
@@ -314,6 +392,28 @@ width: 270px;
   letter-spacing: 0.03em;
   
   color: var(--text-color-h);
+}
+
+.works-thumb {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 70px;
+  text-align: center;
+  font-size: 14px;
+  line-height: 1.17;
+  padding: 27px 82px;
+  text-transform: uppercase;
+
+  color: var(--theme-color-light);
+  background-color: rgba(47, 48, 58, 0.8);;
+}
+
+.works-thumb-title {
+  font-size: 14px;
+  line-height: 1.14;
+
 }
 
 /*Team*/
@@ -409,6 +509,9 @@ height: 428px;
 .link-social-circle:hover {
   background-color: var(--text-color-hover);
   color: var(--theme-color-light);
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+   color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* Partner section */
@@ -431,6 +534,8 @@ border-radius: 4px;
 .link-partner:focus {
   color: var(--text-color-hover);
   border: 1px solid var(--text-color-hover);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
 
 .partner {
@@ -611,6 +716,10 @@ li>.button:focus
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
   0px 1px 2px rgba(0, 0, 0, 0.08),
   0px 2px 2px rgba(0, 0, 0, 0.12);
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 /*Gallery*/
@@ -619,17 +728,56 @@ li>.button:focus
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+
   margin-bottom: 98px;
+
+  
 }
+
 .list-item {
+  
   border: 1px solid #EEEEEE;
   margin-right: 30px;
   height: 404px;
   width: 370px;
+  
+}
+
+.portf-thumb {
+  position: relative;
+  overflow: hidden;
+}
+
+.portf-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.56;
+
+  padding: 63px 24px;
+ 
+  color: var(--theme-color-light);
+  background-color: rgba(33, 150, 243, 0.9);
+  height: 100%;
+  width: 100%;
+
+  transform: translateY(100%);
+  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.list-item:hover .portf-overlay {
+  transform: translateY(0);
 }
 
 .list-item:hover{
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+
+  transition: filter 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
 
 .list-item:nth-child(3n) {
